add more DDD with bank accounts